# SafeCourt-AI

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
attached_assets/: .env_1774631835569.development  .env_1774631835570.production  AppShell_1774632203932.tsx  App_1774632129972.css  App_1774632129972.tsx  Chat_1774632387878.tsx  Dashboard_1774632387880.tsx  DebateResult_1774632164525.tsx  Debate_1774632387881.tsx  Dockerfile_1774631787183  Dockerfile_1774631835572  Dockerfile_1774632792016  Documents_1774632387882.tsx  Header_1774632203933.tsx  Navigation_1774632203934.tsx  Pasted-C-gitignore-cookies-txt-docker-compose-yml-package-lock_1774632098682.txt  Pasted-Enhance-my-project-by-implementing-a-privacy-safe-Verdi_1774822568107.txt  Pasted-Enhance-the-SafeCourt-AI-Trial-Page-with-the-following-_1774823983780.txt  Pasted-Enhance-the-SafeCourt-AI-system-by-fixing-the-Verdict-H_1774823248416.txt  Pasted-Enhance-the-SafeCourt-AI-system-by-implementing-a-STRIC_1774821613639.txt  Pasted-Enhance-the-SafeCourt-AI-system-by-implementing-two-UI-_1774820744171.txt  Pasted-Enhance-the-Sanitisation-Page-UI-by-adding-a-visual-suc_1774816514878.txt  Pasted-I-want-to-completely-redesign-my-frontend-UI-from-a-cha_1774813275428.txt  Pasted-I-want-to-completely-redesign-my-frontend-UI-from-a-cha_1774813329175.txt  Pasted-Improve-the-multi-agent-legal-debate-system-under-trial_1774819803296.txt  Pasted-Redesign-and-enhance-the-Trial-Courtroom-Page-UI-and-in_1774815825303.txt  Pasted-Redesign-the-Sanitisation-Page-UI-to-match-a-premium-le_1774815090142.txt  (+30 more)
backend/: .env  (+1 more)
(+70 files in other folders)
